fix(): make launchpad compatible with browsers not support flex gap

--- a/bricks/containers/src/content-layout/styles.shadow.css
+++ b/bricks/containers/src/content-layout/styles.shadow.css
@@ -13,5 +13,6 @@
   :host {
     display: grid;
     grid-auto-flow: row;
+    height: min-content;
   }
 }
